src/index.css
body {
    font-family: Verdana, sans-serif;
    display: flex;
    justify-content: center;
    color: darkslategray;
}

.header-wrap {
    border: 1px dotted lightslategray;
    width: 100%;
}

.trips-wrap {
    margin: 1px 0;
    display: flex;
    flex-direction: column;
}

.heading {
    padding: 0 0.6rem;
}

.trips-cards-wrap {
    display: flex;
    flex-wrap: wrap;
    width: 75%;
    margin: 0 auto;
    justify-content: flex-start;
}

@media only screen and (max-width: 640px) {
    .trips-wrap {
        align-items: center;
        margin: 0 auto;
    }
}

.card-wrap {
    border: 1px solid lightgray;
    margin: 0.4rem;
    padding: 0.6rem;
    max-width: 24rem;
    min-width: 20rem;
}

@media only screen and (max-width: 1145px) {
    .card-wrap {
        margin: 0.4rem auto;
    }
}

.category {
    color: slategray;
    font-size: 0.8rem;
    font-weight: 800;
}

.card-text {
    font-size: 0.8rem;
    font-weight: 800;
    margin: 4px 0;
}

.card-copy {
    font-size: 0.9rem;
    color: gray;
    letter-spacing: 0.6px;
}

.date-row {
    display: flex;
}

.image {
    width: 100%;
}

.img-row {
    flex: 1;
}

.nav-bar {
    display: flex;
    justify-content: space-evenly;
}

.nav-option {
    display: flex;
    align-items: center;
    -webkit-transition-duration: 0.3s; /* Safari */
    transition-duration: 0.3s;
}

.opt-wrapper:hover .nav-option {
    cursor: pointer;
    text-shadow: 2px 2px 20px rgb(42, 143, 129);
    transform: rotate(-360deg);
}

